--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
 
 <body>
 
-    <h1>PetHelper 🔥🔥🔥</h1>
+    <h1>PetHelper 🐶🐶🐶</h1>
 
     <section id="whenSignedOut">
 
@@ -50,7 +50,7 @@
 
         <div id="userDetails"></div>
 
-        <!-- <button id="signOutBtn" hidden="true">Sign Out</button> -->
+        <button id="signOutBtn" hidden="true">Sign Out</button>
 
     </section>
 
