rendering current pet helpers html

--- a/public/index.html
+++ b/public/index.html
@@ -55,17 +55,14 @@
         <br>
 
 
-
+        <h3>Think you can help us take care of our pets? Join us now!</h1>
         <form>
-            <input id="firstName" placeholder="First Name">
-            <input id="lastName" placeholder="Last Name">
-            
-            <br>
-                <input type="checkbox" id="service1" name="walk" value="Walk">
+                <h4>Choose what you would like to do!</h2>
+                <input class="services" type="checkbox" id="service1" name="walk" value="Walk">
                 <label for="service1"> Walk</label><br>
-                <input type="checkbox" id="service2" name="bath" value="Bath">
+                <input class="services" type="checkbox" id="service2" name="bath" value="Bath">
                 <label for="service2"> Bath</label><br>
-                <input type="checkbox" id="service3" name="houseSit" value="House Sit">
+                <input class="services" type="checkbox" id="service3" name="houseSit" value="House Sit">
                 <label for="service3"> HouseSit</label><br>
          
             <button type="submit" id="createPetHelper">Become a Pet Helper</button>
@@ -76,6 +73,7 @@
 
 
     <section id="petHelperDiv" hidden="true">
+        <h3>Current Pet Helpers</h3>
         <ul id="petHelperList">
 
         </ul>
